--- a/CountWithFriends/Status.storyboard
+++ b/CountWithFriends/Status.storyboard
@@ -13,7 +13,7 @@
                         <viewControllerLayoutGuide type="top" id="mQK-6Y-ErG"/>
                         <viewControllerLayoutGuide type="bottom" id="aCh-Tl-O4l"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="sw3-Vh-gUQ">
+                    <view key="view" contentMode="scaleToFill" id="sw3-Vh-gUQ" customClass="UICollectionView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
