--- a/CountWithFriends/Base.lproj/Main.storyboard
+++ b/CountWithFriends/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -547,32 +547,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vbt-yE-hV4">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Cc-dL-VSK">
-                                        <rect key="frame" x="8" y="23" width="34" height="30"/>
-                                        <state key="normal" title="Back">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="onBackButtonTapped:" destination="R9x-nT-NJ6" eventType="touchUpInside" id="OHN-nS-pgx"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Round" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IN0-LF-WUq">
-                                        <rect key="frame" x="257" y="17" width="87" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="IN0-LF-WUq" secondAttribute="bottom" constant="1" id="77x-MK-ic2"/>
-                                    <constraint firstItem="IN0-LF-WUq" firstAttribute="centerX" secondItem="Vbt-yE-hV4" secondAttribute="centerX" id="77x-bw-zZa"/>
-                                    <constraint firstItem="1Cc-dL-VSK" firstAttribute="leading" secondItem="Vbt-yE-hV4" secondAttribute="leading" constant="8" id="OFW-W7-uxa"/>
-                                    <constraint firstAttribute="bottom" secondItem="1Cc-dL-VSK" secondAttribute="bottom" constant="1" id="Tk7-h1-Ogn"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kOR-Yz-3Is">
                                 <rect key="frame" x="0.0" y="559" width="600" height="41"/>
                                 <color key="backgroundColor" red="0.1137254902" green="0.1215686275" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -635,7 +609,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VS." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y1C-Tf-3c3">
-                                        <rect key="frame" x="267" y="29.5" width="36.5" height="29"/>
+                                        <rect key="frame" x="267" y="30" width="37" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -713,23 +687,34 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <navigationBar alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9f-QH-yip">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Enter Game" id="RTM-xH-hcU">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="ANx-ib-EUK">
+                                            <connections>
+                                                <action selector="onBackButtonTapped:" destination="R9x-nT-NJ6" id="fDY-o6-YPz"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="0.098039215690000001" green="0.1843137255" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="kOR-Yz-3Is" firstAttribute="top" secondItem="mUA-lR-roH" secondAttribute="bottom" constant="20" id="0Ek-Ne-SnZ"/>
-                            <constraint firstItem="Vbt-yE-hV4" firstAttribute="height" secondItem="IHA-gw-gEx" secondAttribute="height" multiplier="0.09" id="99X-lO-hOY"/>
+                            <constraint firstItem="l9f-QH-yip" firstAttribute="leading" secondItem="kOR-Yz-3Is" secondAttribute="leading" id="3LF-WH-xtb"/>
                             <constraint firstAttribute="trailing" secondItem="kOR-Yz-3Is" secondAttribute="trailing" id="ESG-8H-PsF"/>
                             <constraint firstItem="mUA-lR-roH" firstAttribute="centerX" secondItem="IHA-gw-gEx" secondAttribute="centerX" id="Hri-CJ-2cF"/>
-                            <constraint firstItem="Vbt-yE-hV4" firstAttribute="top" secondItem="IHA-gw-gEx" secondAttribute="top" id="PbW-Mq-iDd"/>
-                            <constraint firstItem="mwc-CD-NKy" firstAttribute="top" secondItem="Vbt-yE-hV4" secondAttribute="bottom" constant="40" id="QzG-mD-Uyd"/>
+                            <constraint firstItem="mwc-CD-NKy" firstAttribute="top" secondItem="l9f-QH-yip" secondAttribute="bottom" constant="30" id="OLI-NV-DQf"/>
                             <constraint firstItem="kOR-Yz-3Is" firstAttribute="leading" secondItem="IHA-gw-gEx" secondAttribute="leading" id="SEB-Gb-BOV"/>
-                            <constraint firstAttribute="trailing" secondItem="Vbt-yE-hV4" secondAttribute="trailing" id="T0T-ZV-PJS"/>
                             <constraint firstItem="mwc-CD-NKy" firstAttribute="centerX" secondItem="IHA-gw-gEx" secondAttribute="centerX" id="Uhj-g0-hfq"/>
                             <constraint firstItem="mUA-lR-roH" firstAttribute="width" secondItem="mwc-CD-NKy" secondAttribute="width" id="fz0-gX-2S7"/>
-                            <constraint firstItem="Vbt-yE-hV4" firstAttribute="leading" secondItem="IHA-gw-gEx" secondAttribute="leading" id="ih1-6M-F2q"/>
+                            <constraint firstItem="l9f-QH-yip" firstAttribute="trailing" secondItem="kOR-Yz-3Is" secondAttribute="trailing" id="h7y-su-UjN"/>
                             <constraint firstItem="mwc-CD-NKy" firstAttribute="width" secondItem="IHA-gw-gEx" secondAttribute="width" multiplier="0.95" id="ltR-dL-d3H"/>
                             <constraint firstItem="mUA-lR-roH" firstAttribute="top" secondItem="mwc-CD-NKy" secondAttribute="bottom" constant="25" id="uPL-gL-IND"/>
                             <constraint firstItem="hIw-JG-m5f" firstAttribute="top" secondItem="kOR-Yz-3Is" secondAttribute="bottom" id="ugm-g2-5tN"/>
+                            <constraint firstItem="l9f-QH-yip" firstAttribute="top" secondItem="Wpj-1l-fxN" secondAttribute="bottom" id="wVV-BN-Uy1"/>
                         </constraints>
                     </view>
                     <connections>
@@ -739,12 +724,11 @@
                         <outlet property="player0ScoreLabel" destination="qbU-Wq-1CC" id="fwt-3a-5CR"/>
                         <outlet property="player1Label" destination="Drb-Pz-EkL" id="m2E-ie-dIk"/>
                         <outlet property="player1ScoreLabel" destination="8eB-6t-WYE" id="VVw-aD-jM0"/>
-                        <outlet property="roundLabel" destination="IN0-LF-WUq" id="zIx-TK-dAf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RoT-6F-Ukx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1279" y="1108"/>
+            <point key="canvasLocation" x="1298" y="1081"/>
         </scene>
         <!--Game Board View Controller-->
         <scene sceneID="SKr-u7-8y5">
