--- a/CountWithFriends/GameMenu.storyboard
+++ b/CountWithFriends/GameMenu.storyboard
@@ -88,6 +88,9 @@
                                         <state key="normal" title="       Single Player" image="soloPlayer">
                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onStartGameTapped:" destination="1xA-Jq-foR" eventType="touchUpInside" id="bvv-Ff-TyV"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZC-op-V7T">
                                         <rect key="frame" x="0.0" y="56" width="190" height="50"/>
